<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            tools:context="com.multidoctores.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/pad_20dp"
        android:paddingLeft="@dimen/pad_15dp"
        android:paddingRight="@dimen/pad_15dp"
        android:paddingTop="@dimen/pad_20dp" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="134dp"
            android:layout_height="111dp"
            android:layout_marginBottom="@dimen/pad_20dp"
            android:src="@drawable/logo_login" />



        <EditText
            android:id="@+id/user"
            style="@style/editext_graybg"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="@dimen/pad_5dp"
            android:drawableLeft="@drawable/ic_username"
            android:hint="@string/username"
            android:textColorHint="#0071BC"
            android:textColor="#0071BC">

        </EditText>

        <EditText
            android:id="@+id/email"
            style="@style/editext_graybg"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:drawableLeft="@drawable/ic_username"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="#0071BC"
            android:textColor="#0071BC">


        </EditText>

        <EditText
            android:id="@+id/pwd"
            style="@style/editext_graybg"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginBottom="@dimen/pad_20dp"
            android:layout_marginTop="@dimen/pad_5dp"
            android:drawableLeft="@drawable/ic_pwd"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="#0071BC"
            android:textColor="#0071BC">
        </EditText>

        <LinearLayout
            android:id="@+id/main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnReg"
                style="@style/btn_white_large"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginLeft="@dimen/pad_10dp"
                android:layout_weight="1"
                android:text="@string/register" />
        </LinearLayout>

        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:padding="@dimen/pad_10dp"
                  android:text="@string/title_activity_ya_tengo"
                  android:textColor="@color/main_color_gray_dk"
                  android:textSize="@dimen/txt_18sp"
                  android:gravity="center"
                  android:drawablePadding="@dimen/pad_10dp"
                  android:layout_marginTop="20dp"
                  android:clickable="false"
                  android:id="@+id/tengo"/>

    </LinearLayout>

</ScrollView>